# ipc_main

./: CMakeLists copy.txt  CMakeLists.txt  ab.txt  main copy.cpp  main.cpp  setup.py
TEMP/v2ray/: config.jsonc
cppipc_python.egg-info/: PKG-INFO  SOURCES.txt
src/: main copy.cpp  main.cpp
test/: test_ipc.py
